fix: correct focus visible

--- a/src/components/button/_button.scss
+++ b/src/components/button/_button.scss
@@ -34,6 +34,7 @@
 
 	&:focus-visible {
 		outline: 2px solid $primary-color;
+		outline-offset: 2px;
 	}
 
 	&_filled {
